--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,7 +59,7 @@ button:disabled {
 
 /* Join Page Styles */
 
-.centered-form {
+.form {
     background: #333744;
     width: 100vw;
     height: 100vh;   
@@ -68,18 +68,18 @@ button:disabled {
     align-items: center;
 }
 
-.centered-form__box {
+.form-box {
     box-shadow: 0px 0px 17px 1px #1D1F26;
     background: #F7F7FA;
     padding: 24px;
     width: 250px;
 }
 
-.centered-form button {
+.form button {
     width: 100%;
 }
 
-.centered-form input {
+.form input {
     margin-bottom: 16px;
     width: 100%;
 }
